<resources>
    <string name="app_name">DUTComputerLabs-App</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_user_detail">Thông tin cá nhân</string>
    <string name="menu_change_password">Đổi mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="enter_your_old_password">Enter your old password:</string>
    <string name="confirm_your_new_password">Confirm your new password</string>
    <string name="Save">Save</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="name">Họ và tên:</string>
    <string name="birthday">Ngày sinh:</string>
    <string name="gender">Giới tính:</string>
    <string name="faculty">Khoa:</string>
    <string name="phone_number">Số điện thoại:</string>
    <string name="email">Email</string>
    <string name="address">Địa chỉ:</string>
    <string name="menu_booking">Đặt phòng</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_booking_history">Lịch sử đặt phòng</string>

</resources>
