<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/group_top">
        <item
            android:id="@+id/nav_user_detail"
            android:icon="@drawable/user_detail_logo"
            android:title="@string/menu_user_detail" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/change_password_logo"
            android:title="@string/menu_change_password" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_booking"
            android:title="@string/menu_booking" />
        <item
            android:id="@+id/nav_booking_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_booking_history" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_bottom">
        <item
            android:id="@+id/btn_logout"
            android:icon="@drawable/ic_logout"
            android:title="Đăng xuất" />
    </group>
</menu>
