<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_user_detail">

    <fragment
        android:id="@+id/nav_user_detail"
        android:name="com.example.dutcomputerlabs_app.ui.UserDetail.UserDetailFragment"
        android:label="@string/menu_user_detail"
        tools:layout="@layout/fragment_user_detail">
    </fragment>

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.example.dutcomputerlabs_app.ui.UserDetail.ChangePasswordFragment"
        android:label="@string/menu_change_password"
        tools:layout="@layout/fragment_change_password">
    </fragment>

    <fragment
        android:id="@+id/nav_booking"
        android:name="com.example.dutcomputerlabs_app.ui.Booking.BookingFragment"
        android:label="@string/menu_booking"
        tools:layout="@layout/fragment_booking" >
    </fragment>

    <fragment
        android:id="@+id/nav_booking_history"
        android:name="com.example.dutcomputerlabs_app.ui.BookingHistory.BookingHistoryFragment"
        android:label="@string/menu_booking_history"
        tools:layout="@layout/fragment_booking_history">
    </fragment>
</navigation>