<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.UserDetail.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/enter_your_old_password"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_password"
            android:background="@drawable/border"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/text_err_old_password"
            android:textSize="20sp"
            android:textColor="@color/colorRed"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/enter_your_new_password"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_new_pw"
            android:background="@drawable/border"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

        <TextView
            android:id="@+id/text_err_new_password"
            android:textSize="20sp"
            android:textColor="@color/colorRed"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/confirm_your_new_password"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:drawableLeft="@drawable/ic_confirm"
            android:background="@drawable/border"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/text_err_confirm_new_password"
            android:textSize="20sp"
            android:textColor="@color/colorRed"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_save_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:text="@string/Save"
            android:background="@drawable/border_button"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>