<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.UserDetail.UserDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <ImageView
                android:id="@+id/image_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/colorBlack"
            android:drawableStart="@drawable/ic_name"
            android:imeOptions="actionDone"
            android:enabled="false"
            android:singleLine="true"
            android:textSize="20sp"
            android:background="@drawable/border" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/birthday"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="20dp"
                    android:drawableStart="@drawable/ic_birthday"
                    android:background="@drawable/border"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/background"
                android:src="@drawable/date_picker_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/gender"
                    android:textSize="20sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:drawableStart="@drawable/ic_gender"
                        android:background="@drawable/border"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp" />
                    <Spinner
                        android:id="@+id/spinner_gender"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:visibility="invisible"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/faculty"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/faculty"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:textSize="20sp"
                android:drawableStart="@drawable/ic_faculty"
                android:textColor="@color/colorBlack"
                android:background="@drawable/border"
                android:layout_marginStart="20dp" />
            <Spinner
                android:id="@+id/spinner_faculty"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/phone_number"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:imeOptions="actionDone"
            android:enabled="false"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_contact_phone"
            android:background="@drawable/border" />
        <TextView
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/email"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:imeOptions="actionDone"
            android:enabled="false"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_email"
            android:background="@drawable/border" />

        <TextView
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:text="@string/address"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textMultiLine"
            android:enabled="false"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:background="@drawable/border" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp">
            <Button
                android:id="@+id/btn_change_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/border_button"
                android:textAllCaps="false"
                android:text="Chỉnh sửa"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btn_change_info"
                android:background="@drawable/border_button"
                android:layout_marginEnd="10dp"
                android:visibility="invisible"
                android:textAllCaps="false"
                android:text="Quay lại"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_save_change_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_button"
                android:textSize="20sp"
                android:visibility="invisible"
                android:textAllCaps="false"
                android:text="Lưu"
                android:layout_alignParentRight="true" />

            </RelativeLayout>
        </LinearLayout>

</ScrollView>